@@ -676,6 +676,10 @@ ENDMACRO(ZORBA_SET_TEST_PROPERTY)
 # ZORBA_XHTML_REQUISITES_PATH - points to the dir containing the html requisites (images, lib, styles, templates dirs)
 # Zorba_EXE - points to zorba.exe (or zorba.bat)
 MACRO (ADD_XQDOC_TARGETS)
+	IF(NOT ZORBA_WITH_FILE_ACCESS)
+		MESSAGE(WARNING "Can not build XQDoc documentation because 'File' module is not present")
+	ENDIF()
+
   MESSAGE(STATUS "ADD_XQDOC_TARGETS")
 
   SET(ZORBA_XQDOC_XML_XQ
@@ -698,7 +702,7 @@ MACRO (ADD_XQDOC_TARGETS)
       COMMENT "Building XQDoc XML documentation ..."
   )
   MESSAGE(STATUS "  added target xqdoc-xml")
-  ADD_DEPENDENCIES(xqdoc-xml zorba_simplestore)
+  ADD_DEPENDENCIES(xqdoc-xml zorbacmd zorba_simplestore check_uris)
 
   SET_TARGET_PROPERTIES (xqdoc-xml PROPERTIES
     EXCLUDE_FROM_DEFAULT_BUILD 1
